# dae-solver

./: .gitignore  CMakeLists.txt  DAEModel.cpp  DAEModel.h  ElastanceData.h  ElastanceDenormalizer.cpp  ElastanceDenormalizer.h  Parameters.cpp  Parameters.h  Solver.cpp  Solver.h  plot_elastance.py  plot_solver.py  visualize.py
Google_tests/: CMakeLists.txt  test.cpp
